--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.2",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^19.2.2",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
