--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://virendra-610.github.io/ankita-secret-space",
   "name": "ankita-garden",
   "version": "0.1.0",
   "private": true,
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,6 +34,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "engines": {
+  "node": "18.x"
   },
   "browserslist": {
     "production": [
@@ -47,6 +53,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.24",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
   }
